# Zoom-clone

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  ngrok.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  turbo.json
.cursor/plans/: bug_fixes_&_features_docs_b2007d1a.plan.md  zoom_clone_implementation_e61f64b5.plan.md  zoom_ui_dashboard_1df36920.plan.md
.cursor/rules/: backend.mdc  frontend.mdc  project.mdc
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  package.json  pyproject.toml  seed.py
apps/api/app/: database.py  main.py  models.py  schemas.py
apps/api/routers/: meetings.py  participants.py
apps/api/services/: meeting_service.py
apps/api/websocket/: manager.py  signaling.py
apps/web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/hooks/: useMediaDevices.ts  useWebRTC.ts  useWebSocket.ts
apps/web/lib/: api.ts  constants.ts  datetime.ts  invite-link.ts  meeting-code.ts  meeting-window.ts  types.ts
docs/: Scaler_SDE_Fullstack_Assignment_-_Zoom_Clone.docx.md  Zoom Clone - Technical Architecture & Implementation Guide.md
docs/plan/: INDEX.md  PHASE_10_features.md  PHASE_2_backend_apis.md  PHASE_3_dashboard_ui.md  PHASE_4_meeting_room.md  PHASE_5_websocket_signaling.md  PHASE_6_webrtc_mesh.md  PHASE_7_host_controls.md  PHASE_8_polish.md  PHASE_9_bugfixes.md
(+28 files in other folders)
